--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -26,6 +26,7 @@
       font-weight: 700;
       margin-bottom: 10px;
       letter-spacing: 2px;
+      -webkit-user-select: none;
       user-select: none;
     }
 
@@ -52,6 +53,7 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
+      -webkit-user-select: none;
       user-select: none;
     }
 
@@ -81,6 +83,7 @@
       text-align: center;
       font-size: 0.85rem;
       opacity: 0.6;
+      -webkit-user-select: none;
       user-select: none;
     }
 
