--- a/src/views/landingpage.ejs
+++ b/src/views/landingpage.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Secure Online Coding Exam Platform</title>
-    <link rel="stylesheet" href="/public/stylesheets/landingpage.css" />
+  <link rel="stylesheet" href="/stylesheets/landingpage.css" />
 </head>
 <body>
   <div class="container">
@@ -13,8 +13,8 @@
       Secure &amp; Fair Online Coding Examination Platform
     </div>
     <div class="buttons">
-      <a href="/login" class="btn btn-login">Login</a>
-      <a href="/register" class="btn btn-register">Register</a>
+      <a href="#" class="btn btn-login">Login</a>
+      <a href="#" class="btn btn-register">Register</a>
     </div>
   </div>
 
